# substrait-cpp

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .iwyu-mapping.imp  .licenserc.yaml  CMakeLists.txt  Justfile  Makefile  README.md  bb.edn  patch.diff
.github/: CODEOWNERS  stale.yml
.github/workflows/: build_and_test.yml  build_test.yml  check.yml
.topos/: babashka  jank
build-Debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-Debug/export/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ci/scripts/: check.py  license-header.py  lint_exclusions.txt  lint_inclusions.txt  lintutils.py  run-clang-tidy.py  run_cpplint.py  util.py
cmake/: clang-tidy.cmake  iwyu.cmake
cmake_modules/: BuildUtils.cmake
core/: CMakeLists.txt
core/common/: CMakeLists.txt  Exceptions.cpp
core/function/: CMakeLists.txt  Extension.cpp  Function.cpp  FunctionLookup.cpp
core/type/: Type.cpp
docker/: Dockerfile  README.md
export/: CMakeLists.txt
export/java/: TextPlan.java
export/planloader/: CMakeLists.txt  Makefile  planloader.cpp  planloader.h  textplan.cpp
export/planloader/tests/: CMakeLists.txt  PlanLoaderTest.cpp
include/common/: Exceptions.h
include/function/: Extension.h  Function.h  FunctionLookup.h  FunctionMapping.h  FunctionSignature.h
include/type/: Type.h
scripts/: clang-format.sh  clang-tidy.sh  cmake-format.sh  find_vs.ps1  install-just.bb  run-clang-format.sh  run-clang-tidy.py  run-clang-tidy.sh  run-cmake-format.sh  setup-helper-functions.sh  setup-jank.bb  setup-macos.sh  setup-ubuntu.sh
src/: CMakeLists.txt  Extension.cpp  Extension.h  Function.cpp  Function.h  FunctionLookup.cpp  FunctionLookup.h  FunctionMapping.h  FunctionSignature.h  SubstraitExtension.cpp  SubstraitExtension.h  SubstraitFunction.cpp  SubstraitFunction.h  SubstraitType.cpp  SubstraitType.h  Type.cpp  Type.h
src/common/: CMakeLists.txt  Exceptions.cpp  Exceptions.h
src/core/: CMakeLists.txt  Extension.cpp  Extension.h  Function.cpp  Function.h  FunctionLookup.cpp  FunctionLookup.h  FunctionMapping.h  Type.cpp  Type.h
src/core/tests/: CMakeLists.txt  FunctionLookupTest.cpp  TypeTest.cpp
src/substrait/: CMakeLists.txt
src/substrait/common/: CMakeLists.txt  Decimal.cpp  Exceptions.cpp  Io.cpp  NumberUtils.h  PlanTransformerTool.cpp  StringUtils.h  Tool.cpp
src/substrait/common/tests/: CMakeLists.txt  IoTest.cpp  NumberUtilsTest.cpp  StringUtilsTest.cpp
src/substrait/expression/: CMakeLists.txt  DecimalLiteral.cpp
src/substrait/expression/tests/: CMakeLists.txt  DecimalTest.cpp
src/substrait/function/: CMakeLists.txt  Extension.cpp  Function.cpp  FunctionLookup.cpp
src/substrait/function/tests/: FunctionLookupTest.cpp
src/substrait/proto/: CMakeLists.txt  ProtoUtils.cpp  ProtoUtils.h  update_proto_package.pl
src/substrait/textplan/: Any.h  CMakeLists.txt  Finally.h  Location.cpp  Location.h  ParseResult.cpp  ParseResult.h  PlanPrinterVisitor.cpp  PlanPrinterVisitor.h  README.md  RelationData.h  StringManipulation.cpp  StringManipulation.h  StructuredSymbolData.h  SubstraitErrorListener.cpp  SubstraitErrorListener.h  SymbolTable.cpp  SymbolTable.h  SymbolTablePrinter.cpp  SymbolTablePrinter.h  TypeConversion.cpp  TypeConversion.h
src/substrait/textplan/converter/: BasePlanProtoVisitor.cpp  BasePlanProtoVisitor.h  CMakeLists.txt  HierarchyStack.h  InitialPlanProtoVisitor.cpp  InitialPlanProtoVisitor.h  LoadBinary.cpp  LoadBinary.h  ParseBinary.cpp  ParseBinary.h  PipelineVisitor.cpp  PipelineVisitor.h  PlanPrinterVisitor.cpp  PlanPrinterVisitor.h  README.md  ReferenceNormalizer.cpp  ReferenceNormalizer.h  SaveBinary.cpp  SaveBinary.h  Tool.cpp
src/substrait/textplan/converter/data/: q6_first_stage.golden.splan
src/substrait/textplan/converter/tests/: BinaryToTextPlanConversionTest.cpp  CMakeLists.txt
src/substrait/textplan/data/: set-comparision-any.json  tpch-plan01.json  tpch-plan02.json  tpch-plan03.json  tpch-plan04.json  tpch-plan05.json  tpch-plan06.json  tpch-plan07.json  tpch-plan09.json  tpch-plan10.json  tpch-plan11.json  tpch-plan13.json  tpch-plan14.json  tpch-plan16.json  tpch-plan17.json  tpch-plan18.json  tpch-plan19.json  tpch-plan20.json  tpch-plan21.json  tpch-plan22.json
src/substrait/textplan/parser/: CMakeLists.txt  LoadText.cpp  LoadText.h  ParseText.cpp  ParseText.h  README.md  SubstraitParserErrorListener.cpp  SubstraitParserErrorListener.h  SubstraitPlanPipelineVisitor.cpp  SubstraitPlanPipelineVisitor.h  SubstraitPlanRelationVisitor.cpp  SubstraitPlanRelationVisitor.h  SubstraitPlanSubqueryRelationVisitor.cpp  SubstraitPlanSubqueryRelationVisitor.h  SubstraitPlanTypeVisitor.cpp  SubstraitPlanTypeVisitor.h  SubstraitPlanVisitor.cpp  SubstraitPlanVisitor.h  Tool.cpp
src/substrait/textplan/parser/data/: provided_sample1.json  provided_sample1.splan
src/substrait/textplan/parser/grammar/: CMakeLists.txt  SubstraitPlanLexer.g4  SubstraitPlanParser.g4
src/substrait/textplan/parser/tests/: CMakeLists.txt  TextPlanParserTest.cpp
src/substrait/textplan/tests/: CMakeLists.txt  ParseResultMatchers.cpp  ParseResultMatchers.h  RoundtripTest.cpp  SymbolTableTest.cpp
src/substrait/type/: CMakeLists.txt  Type.cpp
src/substrait/type/tests/: TypeTest.cpp
src/tests/: CMakeLists.txt  ExtensionTest.cpp  (+4 more)
substrait/: CMakeLists.txt
substrait/common/: CMakeLists.txt  Exceptions.cpp  NumberUtils.h  StringUtils.h
substrait/common/tests/: NumberUtilsTest.cpp  StringUtilsTest.cpp
substrait/function/: CMakeLists.txt  Extension.cpp  Function.cpp  FunctionLookup.cpp
substrait/function/tests/: CMakeLists.txt  FunctionLookupTest.cpp
substrait/proto/: CMakeLists.txt  update_proto_includes.py  update_proto_package.pl
substrait/textplan/: CMakeLists.txt  PlanConverter.cpp  PlanConverter.h  SubstraitLexer.g4  SubstraitParser.g4  SymbolTable.cpp  SymbolTable.h
substrait/textplan/tests/: BinaryToTextPlanConversionTest.cpp  CMakeLists.txt  SubstraitExample.txt
substrait/type/: CMakeLists.txt  Type.cpp
substrait/type/tests/: CMakeLists.txt  TypeTest.cpp
(+298 files in other folders)
